--- a/linux/i3/i3blocks.conf
+++ b/linux/i3/i3blocks.conf
@@ -14,22 +14,30 @@ separator_block_width=15
 command=/home/manlin/.config/scripts/arch-update 
 interval=3600
 markup=pango
+QUIET=true
 LABEL= 
 BASE_COLOR=#ffffff
 UPDATE_COLOR=#FFFF85
 
-#[documentation]
-#full_text=Documentation
-#website=https://vivien.github.io/i3blocks
-#command=xdg-open "$website"
-#color=#f12711
+[cpu_usage]
+command=/home/manlin/.config/scripts/cpu_usage
+interval=10
+LABEL=CPU 
+#min_width=CPU: 100.00%
+#T_WARN=50
+#T_CRIT=80
+#DECIMALS=2
+
+[memory]
+command=/home/manlin/.config/scripts/memory
+label=MEM 
+interval=10
 
 [temperature]
 command=/home/manlin/.config/scripts/temperature
-#LABEL=
-interval=10
-#T_WARN=70
-#T_CRIT=90
+interval=30
+T_WARN=70
+T_CRIT=90
 #SENSOR_CHIP=""
 
 [disk]
@@ -41,5 +49,5 @@ interval=30
 
 [time]
 command=date '+%Y-%m-%d %H:%M:%S '
-interval=1
+interval=5
 
